--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+
+    <link rel="preload" as="image"  href="src/Presentation/view/assets/card/01.jpg" />
+    <link rel="preload" as="image"  href="src/Presentation/view/assets/card/02.jpg" />
+    <link rel="preload" as="image"  href="src/Presentation/view/assets/card/03.jpg" />
+    <link rel="preload" as="image"  href="src/Presentation/view/assets/card/04.jpg" />
+    <link rel="preload" as="image"  href="src/Presentation/view/assets/card/05.jpg" />
+    <link rel="preload" as="image"  href="src/Presentation/view/assets/card/06.jpg" />
+    <link rel="preload" as="image"  href="src/Presentation/view/assets/card/07.jpg" />
+    <link rel="preload" as="image"  href="src/Presentation/view/assets/card/08.jpg" />
+
+    <title>Match Match Game</title>
   </head>
   <body>
     <div id="app"></div>
